<resources>
    <string name="app_name">Tema3_ADA</string>
    <string name="pref_name">Nombre</string>
    <string name="pref_user_name">Nombre de Usuario</string>
    <string name="pref_birth_date">Fecha de Nacimiento</string>
    <string name="pref_gender">Género</string>
    <string name="pref_gender_dialog">Su género, femenino/masculino</string>
    <string name="pref_name_dialog">Su nombre</string>
    <string name="pref_user_name_dialog">Su nombre de usuario</string>
    <string name="pref_birth_date_dialog">Su fecha de nacimiento</string>
    <string name="pref_birtb_date_summary">Fecha de nacimiento en formato DD/MM/AAAA</string>
    <string name="menu_user_settings">Ajustes de Usuario</string>
    <string name="menu_user_settings_show">Mostrar Ajustes</string>
    <string name="menu_user_settings_edit">Editar Ajustes</string>
    <string name="user_data_name_label">Nombre: </string>
    <string name="user_data_user_name_label">Nombre de Usuario: </string>
    <string name="user_data_birth_date_label">Fecha de Nacimiento: </string>
    <string name="user_data_gender_label">Género: </string>
    <string name="main_button_add_student">Añadir Estudiante</string>
    <string name="main_button_add_lecturer">Añadir Profesor</string>
    <string name="main_button_launch_queries">Realizar consultas</string>
    <string name="add_student_name_label">Introduzca el nombre del estudiante</string>
    <string name="add_student_age_label">Introduzca la edad del estudiante</string>
    <string name="add_student_grade_label">Introduzca el ciclo</string>
    <string name="add_student_course_label">Introduzca el curso</string>
    <string name="add_student_av_qualification_label">Introduzca la nota media</string>
    <string name="add_student_save_button">Guardar Estudiante</string>
    <string name="add_lecturer_name_label">Introduzca el nombre del profesor</string>
    <string name="add_lecturer_age_label">Introduzca la edad del profesor</string>
    <string name="add_lecturer_grade_label">Introduzca el ciclo</string>
    <string name="add_lecturer_course_label">Introduzca el curso</string>
    <string name="add_lecturer_office_number_label">Introduzca el despacho</string>
    <string name="add_lecturer_save_button">Guardar Profesor</string>
    <string name="query_button_all_students">Todos los estudiantes</string>
    <string name="query_button_students_by_grade">Estudiantes por ciclo</string>
    <string name="query_button_students_by_course">Estudiantes por curso</string>
    <string name="query_button_all_lecturers">Todos los profesores</string>
    <string name="query_button_all">Todos</string>
</resources>
