<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueriesLauncher">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_query_all_students"
        android:text="@string/query_button_all_students"
        android:layout_centerVertical="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_query_students_by_grade"
        android:text="@string/query_button_students_by_grade"
        android:layout_below="@id/bt_query_all_students"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_query_students_by_course"
        android:text="@string/query_button_students_by_course"
        android:layout_below="@id/bt_query_students_by_grade"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_query_all_lecturers"
        android:text="@string/query_button_all_lecturers"
        android:layout_below="@id/bt_query_students_by_course"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_query_all"
        android:text="@string/query_button_all"
        android:layout_below="@id/bt_query_all_lecturers"/>


</RelativeLayout>