<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddLecturer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/tv_lecturer_name"
        android:text="@string/add_lecturer_name_label"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/et_lecturer_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/tv_lecturer_age"
        android:text="@string/add_lecturer_age_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/et_lecturer_age"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/tv_lecturer_grade"
        android:text="@string/add_lecturer_grade_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/et_lecturer_grade"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/tv_lecturer_course"
        android:text="@string/add_lecturer_course_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/et_lecturer_course"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/tv_lecturer_office_number"
        android:text="@string/add_lecturer_office_number_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="left"
        android:id="@+id/et_lecturer_office_number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_save_lecturer"
        android:text="@string/add_lecturer_save_button"
        />


</LinearLayout>