<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_add_student"
        android:text="@string/main_button_add_student"
        android:layout_centerVertical="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_add_lecturer"
        android:text="@string/main_button_add_lecturer"
        android:layout_below="@id/bt_add_student"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_launch_queries"
        android:text="@string/main_button_launch_queries"
        android:layout_below="@id/bt_add_lecturer"/>

</RelativeLayout>